[package]
name = "instant_tts_gemini"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
eframe = { version = "0.31", default-features = true }
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
native-tls = "0.2"
rodio = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.27", default-features = true }
ureq = { version = "3.1", features = ["json"] }
url = "2.5"
